gcc/testsuite/g++.dg/gomp/pr94512.C
// PR c++/94512

void
foo ();

template <int>
void
bar ()
{
#pragma omp parallel master taskloop
  foo ();	// { dg-error "for statement expected before" }
}

void
baz ()
{
  bar<0> ();
}
